# prc-digitalschool-ds

./: .gitignore  .textlintrc.json  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: mcp.json  settings.json
docs/: ビジネス理解_ロジックツリー解答例_PPH.md  ビジネス理解_事前資料_PPH.md
inputs/master/: option.csv  option_price.csv  product.csv
inputs/meta/: metadata_20260311_175503_202501.csv  metadata_20260311_175503_202502.csv  metadata_20260311_175503_202503.csv  metadata_20260311_175503_202504.csv  metadata_20260311_175503_202505.csv  metadata_20260311_175503_202506.csv  metadata_20260311_175503_202507.csv  metadata_20260311_175503_202508.csv  metadata_20260311_175503_202509.csv  metadata_20260311_175503_202510.csv  metadata_20260311_175503_202511.csv  metadata_20260311_175503_202512.csv  metadata_20260311_175503_202601.csv  metadata_20260311_175503_202602.csv  metadata_20260423_122529_202603.csv  metadata_20260501_160011_202604.csv  metadata_20260601_113659_202605.csv
inputs/option/: option_20260123_164334_202501.csv  option_20260123_164334_202502.csv  option_20260123_164334_202503.csv  option_20260123_164334_202504.csv  option_20260123_164334_202505.csv  option_20260123_164334_202506.csv  option_20260123_164334_202507.csv  option_20260123_164334_202508.csv  option_20260123_164334_202509.csv  option_20260123_164334_202510.csv  option_20260123_164334_202511.csv  option_20260123_164334_202512.csv  option_20260310_150536_202601.csv  option_20260310_150536_202602.csv  option_20260423_122511_202603.csv  (+2 more)
notebooks/: Notebook_RandomForestやってみよう.ipynb  Notebook_重回帰分析やってみよう.ipynb
(+2 files in other folders)
